# GNN_university

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml  baseline_logreg.yaml  baseline_mlp.yaml  gat.yaml  gat_lr1e-4.yaml  gat_v1.yaml  gat_v1_warmup25.yaml  gcn.yaml  sage.yaml  signed_gcn.yaml  sweep.yaml
data/raw/: README.md
notebooks/: 01_eda.ipynb  02_main_experiment.ipynb  03_error_analysis.ipynb
reports/tables/: comparison.csv  config_baseline_logreg-20260513-235620.json  config_baseline_mlp-20260514-000355.json  config_baseline_mlp-seed0.json  config_baseline_mlp-seed1.json  config_baseline_mlp-seed2.json  config_baseline_mlp-smoke.json  config_baseline_mlp-warmup-seed0.json  config_baseline_mlp-warmup-seed1.json  config_baseline_mlp-warmup-seed2.json  config_gat-20260514-001014.json  config_gat-fix-seed0.json  config_gat-fix-seed1.json  config_gat-fix-seed2.json  config_gat-lr1e-4-seed0.json  config_gat-lr1e-4-seed1.json  config_gat-lr1e-4-seed2.json  config_gat-seed0.json  config_gat-seed1.json  config_gat-seed2.json  config_gat-smoke.json  config_gat_v1-fix-seed0.json  config_gat_v1-fix-seed1.json  config_gat_v1-fix-seed2.json  config_gat_v1-warmup25-seed0.json  config_gat_v1-warmup25-seed1.json  config_gat_v1-warmup25-seed2.json  config_gcn-20260514-000537.json  config_gcn-h128.json  config_gcn-h256.json  config_gcn-h64.json  config_gcn-lr0.001.json  config_gcn-lr0.005.json  config_gcn-lr0.01.json  config_gcn-seed0.json  config_gcn-seed1.json  config_gcn-seed2.json  config_gcn-smoke.json  config_gcn-tune-h128.json  config_gcn-tune-h256.json  (+363 more)
scripts/: export_report_assets.py  prepare_data.py  run_experiment.py  run_sweep.py
src/reddit_gnn/: __init__.py  config.py  seed.py  (+1 more)
tests/: test_data.py  test_error_analysis.py  test_features.py  test_leakage.py  test_metrics.py  test_models.py  test_pyg_dataset.py  test_splits.py  test_tracking.py
(+35 files in other folders)
